<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.doschechko.matylionak.wcguide.about.AboutFragmentViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/final_img" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="25dp"
                android:text="@string/inform_us"

                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="25dp"
                android:hint="@string/put_your_text"/>

            <Button
                android:id="@+id/shareButton"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/share_this_app"
                android:background="@drawable/showmore_button_selector"
                android:elevation="10dp"
                android:textAllCaps="true"
                android:textColor="@color/specialWhite"
                android:foregroundGravity="center"/>
        </LinearLayout>

    </ScrollView>
</layout>